--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main # 또는 master
+      - master # 또는 master
 
 jobs:
   build-and-deploy:
@@ -23,10 +23,11 @@ jobs:
       - name: Build & Export
         run: |
           npm run build
-          npm run export
+          echo ? out/.nojekyll
 
-      - name: Deploy to GitHub Pages
+      - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./out
+          publish_branch: gh-pages
