--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "deploy": "npm run build && gh-pages -d out"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
